--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "diamondfinishes-backend",
   "version": "0.1.0",
   "bin": {
-    "diamondfinishes-backend": "bin/diamondfinishes-backend.js"
+    "diamondfinishes-backend": "cdk/bin/diamondfinishes-backend.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
+    "start": "sam local start-api -p 5001",
     "test": "jest",
-    "cdk": "cdk"
+    "synth": "cdk synth > template.yml",
+    "deploy": "cdk deploy",
+    "diff": "cdk diff",
+    "destroy": "cdk destroy"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.93",
