--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
     "diamondfinishes-backend": "cdk/bin/diamondfinishes-backend.js"
   },
   "scripts": {
-    "build": "tsc",
+    "prebuild": "rm -rf .aws-sam && rm -rf build",
+    "tsc-build": "tsc",
+    "build": "webpack --mode development",
     "watch": "tsc -w",
     "start": "sam local start-api -p 5001",
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production",
     "test": "jest",
     "synth": "cdk synth > template.yml",
     "deploy": "cdk deploy",
@@ -22,11 +26,15 @@
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "~3.9.7",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "aws-cdk-lib": "2.15.0",
     "constructs": "^10.0.0",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "ts-loader": "^9.2.8",
+    "yaml-cfn": "^0.3.1"
   }
 }
